[gd_scene load_steps=30 format=3 uid="uid://dpbxblfybuwu6"]

[ext_resource type="Script" uid="uid://b221v61dem8vf" path="res://map/map.gd" id="1_iqbtl"]
[ext_resource type="PackedScene" uid="uid://olx1k0r0di2" path="res://player.tscn" id="2_81obp"]
[ext_resource type="Script" uid="uid://1qj6pglanx3e" path="res://ai/DifficultyRL.gd" id="2_gw5x3"]
[ext_resource type="Script" uid="uid://ccc36y8bo0jyy" path="res://map/flower_spawner.gd" id="3_gw5x3"]
[ext_resource type="Script" uid="uid://q37t7m6c2agj" path="res://map/tree_spawner.gd" id="4_wwcqt"]
[ext_resource type="TileSet" uid="uid://crg0orous800e" path="res://tile_set.tres" id="5_ofiht"]
[ext_resource type="PackedScene" uid="uid://bcfxoeuah1slf" path="res://map/rain_system.tscn" id="6_05mli"]
[ext_resource type="Script" uid="uid://2r81c838wwhe" path="res://map/world_generator.gd" id="7_de6fw"]
[ext_resource type="PackedScene" uid="uid://cf3x46l0ncyf1" path="res://well.tscn" id="8_kb5w5"]
[ext_resource type="Script" uid="uid://bgoy7uljh6g1l" path="res://map/time_system.gd" id="9_rqrn2"]
[ext_resource type="Script" uid="uid://lxvu6yqalklj" path="res://map/rain_controller.gd" id="10_7ho10"]
[ext_resource type="Script" uid="uid://ct23e1gb8hsc5" path="res://map/lighting_system.gd" id="11_xq7gd"]
[ext_resource type="Script" uid="uid://ckr7c4rk8j5ds" path="res://map/player_spawner.gd" id="12_3akue"]
[ext_resource type="Script" uid="uid://c3h4x6wcufkuw" path="res://scripts/ui/HeartSystem.gd" id="13_ta71l"]
[ext_resource type="PackedScene" uid="uid://daqkdbg8j6fwf" path="res://GeminiRiddle.tscn" id="14_pi7e5"]
[ext_resource type="Script" uid="uid://chn5j6dl6iaoy" path="res://scripts/riddleui/RiddleUI.gd" id="15_4gv14"]
[ext_resource type="Script" uid="uid://crb5l7rvldjbb" path="res://scripts/riddleui/HintBulb.gd" id="16_5gt1y"]
[ext_resource type="Texture2D" uid="uid://dvh14cywlfrfr" path="res://assets/ui/hints_bulb.png" id="17_kwd4g"]
[ext_resource type="Texture2D" uid="uid://dxi7du3opig45" path="res://assets/ui/riddle.png" id="18_n3xu8"]
[ext_resource type="FontFile" uid="uid://08vndck327l2" path="res://Jersey10-Regular.ttf" id="19_n7j7o"]
[ext_resource type="PackedScene" uid="uid://fcyo16xbwnnq" path="res://Tasks.tscn" id="20_efawl"]
[ext_resource type="PackedScene" uid="uid://dpqtvtf5uxnjn" path="res://answer_popup.tscn" id="21_ikyq8"]
[ext_resource type="PackedScene" uid="uid://qlpy3iu78nw2" path="res://joy_stick_ui.tscn" id="22_d6tlw"]
[ext_resource type="PackedScene" uid="uid://clivw5ge2vyc" path="res://tutorialscene/TutorialButton.tscn" id="23_kkght"]
[ext_resource type="Script" uid="uid://b3yik852ctwld" path="res://map/rl_overlay.gd" id="25_gw5x3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r5om4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gw5x3"]
bg_color = Color(0, 0, 0, 0.45600003)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwcqt"]
bg_color = Color(0, 0, 0, 0.5)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4sf5t"]

[node name="Map" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_iqbtl")

[node name="DifficultyRL" type="Node" parent="."]
script = ExtResource("2_gw5x3")

[node name="Player" parent="." instance=ExtResource("2_81obp")]

[node name="FlowerSpawner" type="Node" parent="."]
script = ExtResource("3_gw5x3")

[node name="TreeSpawner" type="Node" parent="."]
script = ExtResource("4_wwcqt")

[node name="TileMap" type="TileMapLayer" parent="."]
tile_set = ExtResource("5_ofiht")

[node name="GlowManager" type="Node2D" parent="."]

[node name="RainSystem" parent="." instance=ExtResource("6_05mli")]

[node name="WorldGenerator" type="Node" parent="."]
script = ExtResource("7_de6fw")
well_scene = ExtResource("8_kb5w5")

[node name="TimeSystem" type="Node" parent="."]
script = ExtResource("9_rqrn2")

[node name="RainController" type="Node" parent="."]
script = ExtResource("10_7ho10")

[node name="LightingSystem" type="Node" parent="."]
script = ExtResource("11_xq7gd")

[node name="PlayerSpawner" type="Node" parent="."]
script = ExtResource("12_3akue")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="HeartSystem" type="CanvasLayer" parent="."]
script = ExtResource("13_ta71l")

[node name="GeminiRiddle" parent="." instance=ExtResource("14_pi7e5")]

[node name="RiddleUI" type="CanvasLayer" parent="."]
script = ExtResource("15_4gv14")

[node name="Panel" type="Panel" parent="RiddleUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_r5om4")

[node name="HintsColumn" type="VBoxContainer" parent="RiddleUI/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -6.0
offset_bottom = 6.0
grow_vertical = 2
alignment = 1

[node name="HintBulb1" type="TextureRect" parent="RiddleUI/Panel/HintsColumn"]
modulate = Color(1, 1, 1, 0.70000005)
layout_mode = 2
stretch_mode = 2
script = ExtResource("16_5gt1y")
bulb_texture = ExtResource("17_kwd4g")

[node name="HintBulb2" type="TextureRect" parent="RiddleUI/Panel/HintsColumn"]
modulate = Color(1, 1, 1, 0.70000005)
layout_mode = 2
stretch_mode = 2
script = ExtResource("16_5gt1y")
bulb_texture = ExtResource("17_kwd4g")

[node name="HintBulb3" type="TextureRect" parent="RiddleUI/Panel/HintsColumn"]
modulate = Color(1, 1, 1, 0.70000005)
layout_mode = 2
stretch_mode = 2
script = ExtResource("16_5gt1y")
bulb_texture = ExtResource("17_kwd4g")

[node name="HintBulb4" type="TextureRect" parent="RiddleUI/Panel/HintsColumn"]
modulate = Color(1, 1, 1, 0.70000005)
layout_mode = 2
stretch_mode = 2
script = ExtResource("16_5gt1y")
bulb_texture = ExtResource("17_kwd4g")

[node name="RiddleToggle" type="TextureButton" parent="RiddleUI/Panel"]
modulate = Color(1, 1, 1, 0.70000005)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.0
offset_top = -40.0
offset_right = 91.0
offset_bottom = 140.0
grow_horizontal = 2
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(90, 90)
texture_normal = ExtResource("18_n3xu8")

[node name="RiddleText" type="Label" parent="RiddleUI/Panel"]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 100.0
offset_right = 70.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("19_n7j7o")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_gw5x3")
text = "Loading Question..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HintTooltip" type="Label" parent="RiddleUI/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 1.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("19_n7j7o")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_wwcqt")
text = "loading.."

[node name="Tasks" parent="." instance=ExtResource("20_efawl")]

[node name="AnswerPopup" parent="." instance=ExtResource("21_ikyq8")]

[node name="JoyStickUI" parent="." instance=ExtResource("22_d6tlw")]

[node name="TutorialButton" parent="JoyStickUI" instance=ExtResource("23_kkght")]
modulate = Color(1, 1, 1, 0.70000005)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -38.0
offset_top = -71.0
offset_right = 341.0
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_4sf5t")

[node name="RLOverlay" type="CanvasLayer" parent="."]
script = ExtResource("25_gw5x3")

[node name="ToggleButton" type="TextureButton" parent="RLOverlay"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="RLOverlay"]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="RLOverlay/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DifficultyLabel" type="Label" parent="RLOverlay/Panel/VBox"]
layout_mode = 2

[node name="QText" type="Label" parent="RLOverlay/Panel/VBox"]
layout_mode = 2
